--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.46",
     "framer-motion": "^11.3.30",
     "gsap": "^3.12.5",
     "lenis": "^1.1.13",
