--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lenis": "^1.1.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.26.1",
     "swiper": "^11.1.15"
   },
