--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-phone-number-input": "^3.4.9",
     "react-router-dom": "^6.26.1",
     "swiper": "^11.1.15"
   },
